@@ -4819,7 +4819,7 @@ static void handle_nickserv_allowauth(struct userNode *user, struct userNode *ta
     }
 }
 
-static void handle_nickserv_failpw(struct userNode *user, struct handle_info *handle) {
+static void handle_nickserv_failpw(struct userNode *user, struct handle_info *handle, UNUSED_ARG(void *extra)) {
     struct helpserv_reqlist *reqlist;
     unsigned int i;
 
@@ -5027,7 +5027,7 @@ int helpserv_init() {
     reg_handle_rename_func(handle_nickserv_rename, NULL);
     reg_unreg_func(handle_nickserv_unreg);
     reg_allowauth_func(handle_nickserv_allowauth);
-    reg_failpw_func(handle_nickserv_failpw);
+    reg_failpw_func(handle_nickserv_failpw, NULL);
     reg_handle_merge_func(handle_nickserv_merge);
 
     reg_exit_func(helpserv_db_cleanup);
