@@ -3,6 +3,14 @@ X3 ChangeLog
 
 2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>
 
+	* src/nickserv.h src/nickserv.c: add extra parameter to failpw_func_t and
+	reg_failpw_func.
+
+	* src/mod-helpserv.c: add extra NULL argument/parameter to reflect change
+	in nickserv.
+
+2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>
+
 	* src/hash.h src/hash.c: add extra parameter to topic_func_t and
 	reg_topic_func.
 
